# ed25519

./: .appveyor.yml  .clang-format  .gitignore  CHANGELOG  CMakeLists.txt  Makefile  build-mingw.sh  build.bat  build.sh  meson.build  readme.md  test.bat  test.c  test.sh
csharp/: OrlpEd25519.cs  OrlpEd25519.csproj  README.md
csharp/lib/x64/linux/: liborlp-ed25519.so.1.0.0  liborlp-ed25519.so.1.0.1
csharp/lib/x64/mac/: liborlp-ed25519.1.0.0.dylib  liborlp-ed25519.1.0.1.dylib
csharp/managed/: .gitattributes  .gitignore  GlitchEd25519.sln  GlitchEd25519.sln.DotSettings  README.md
csharp/managed/src/: Fe.cs  Ge.cs  GlitchEd25519.cs  GlitchEd25519.csproj  Precomp.cs  Sc.cs  Util.cs
csharp/managed/tests/: GlitchEd25519.Tests.csproj  Tests.cs
csharp/native/: .gitignore  OrlpEd25519.cs  OrlpEd25519.csproj  README.md
csharp/native/lib/x64/linux/: liborlp-ed25519.so.1.0.2
csharp/native/lib/x64/mac/: liborlp-ed25519.1.0.2.dylib
include/orlp-ed25519/: ed25519.h
src/: add_scalar.c  ed25519.h  fe.c  fixedint.h  ge.c  key_convert.c  key_exchange.c  keypair.c  sc.c  seed.c  sha512.c  sign.c  test.c  verify.c
